--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <meta name="author" content="John Doe">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <div class="about">
-            <h2>Hi👋</h2>
+            <h2 class="headers">Hi👋</h2>
             <p>My name is Andrew Nguyen and I'm an Electrical and Computer Engineering student at the University of Texas at Austin.</p>
             <img src="/images/headshot.jpg" alt="andrew's headshot" width="250" height="250">
             <br />
             <a id="linkedin" href="https://www.linkedin.com/in/nnandrew/">LinkedIn</a>
         </div>
         <div class="photos">
-            <h2>Photography</h2>
+            <h2 class="headers">Photography</h2>
             <p>I like to take pictures sometimes.</p>
             <img src="/images/lhr.jpg" alt="andrew's headshot" width="500" height="500">
             <br />
